# zeroclaw-hackerbot-overlay

./: .gitignore  Cargo.toml  PROJECT_SUMMARY.md  README.md  build.sh  config.toml
config/: hackerbot-default.toml
docs/: DOCUMENTATION_SUMMARY.md  FLAG_SECURITY_ANALYSIS.md  INTEGRATION_TEST_RESULTS.md  MAINTENANCE.md  QUICKSTART.md  SECGN_INTEGRATION.md  SECURITY.md
examples/: integration_test.rs
src/: lib.rs  main.rs
src/security/: config.rs  mod.rs
src/tools/: flag_validator.rs  mod.rs  quiz_validator.rs  scenario_manager.rs  secgen_datastore.rs
workspace/memory/: brain.db
workspace/state/: memory_hygiene_state.json
