[package]
name = "zeroclaw-hackerbot"
version = "1.0.0"
edition = "2021"
authors = ["Hackerbot Team <hackerbot@example.com>"]
description = "Cybersecurity training bot overlay for ZeroClaw - SecGen Hackerbot replacement"
license = "GPL-3.0"
repository = "https://github.com/mission-deny-the-mission/zeroclaw-hackerbot-overlay"
keywords = ["cybersecurity", "education", "hackerbot", "secgen", "training"]
categories = ["command-line-utilities"]

[dependencies]
# ZeroClaw as a library dependency (NO FORK REQUIRED!)
zeroclaw = { git = "https://github.com/openagen/zeroclaw.git", branch = "main" }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async traits
async-trait = "0.1"

# Regex for flag validation
regex = "1.10"

# String similarity for quiz answers
strsim = "0.11"

# HTTP client for SecGen API (if needed)
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Logging
tracing = "0.1"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Filesystem utilities
directories = "6.0"

[dev-dependencies]
# Testing
tokio-test = "0.4"

[profile.release]
opt-level = "z"      # Optimize for size
lto = "fat"          # Link-time optimization
codegen-units = 1    # Better optimization
strip = true          # Remove debug symbols
panic = "abort"      # Smaller binary

[[bin]]
name = "zeroclaw-hackerbot"
path = "src/main.rs"

[lib]
name = "zeroclaw_hackerbot"
path = "src/lib.rs"
